--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "chin_temps"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.41"
 crossterm = "0.29.0"
 serialport = "4.7.2"
