--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 chrono = "0.4.41"
 crossterm = "0.29.0"
+ron = "0.10.1"
+serde = { version = "1.0.219", features = ["derive"] }
 serialport = "4.7.2"
 unix-named-pipe = "0.2.0"
